Mobile responsive design, fixed footer overlap on dashboard, sign up and login pages, and added text to social media icon links in the footer

--- a/src/app/dashboard/chart-summary/chart-summary.component.css
+++ b/src/app/dashboard/chart-summary/chart-summary.component.css
@@ -1,3 +1,6 @@
+.taskSummaryContainer {
+  margin-bottom: 15px !important;
+}
 #taskGraphContainer {
   min-height: 570px;
 }
